# whatawhat-lib

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: gnome_activate_extension.rs  gnome_custom_dbus.rs  gnome_install_extension.rs  macos_test.rs  run_generic.rs  run_gnome.rs  run_kde.rs  run_wayland.rs  test.rs
gnome-extension/: extension.js  metadata.json
src/: config.rs  gnome.rs  gnome_install.rs  hmhm.jxa  idle.rs  kde.js  kde.rs  lib.rs  linux_desktop.rs  macos.rs  print_app_status.jxa  print_app_status_loop.jxa  simple_cache.rs  utils.rs  wayland_idle.rs  wayland_wlr.rs  win.rs  windows_desktop.rs  wl_connection.rs  x11.rs
