[package]
name = "whatawhat-lib"
version = "0.1.0"
edition = "2024"
description = "A collection of utils for windows and linux for collecting activity data"
authors = ["Andrii Zahorulko", "Demmie <2e3s19@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/Anoromi/whatawhat-lib"


[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
cfg-if = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sysinfo = "0.36.1"
tracing = "0.1.41"
zbus = { version = "5.9.0", optional = true }
tokio = { version = "1", features = ["sync", "rt"] }
tracing-subscriber = "0.3.19"
wayland-client = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", features = [
	"staging",
	"client",
], optional = true }
wayland-protocols-plasma = { version = "0.3.9", features = [
	"client",
], optional = true }
wayland-protocols-wlr = { version = "0.3.9", features = [
	"client",
], optional = true }
chrono = "0.4.41"
mockall = { version = "0.13.1", optional = true }

[dependencies.xcb]
version = "^1.6"
features = ["screensaver"]
optional = true

[dependencies.windows]
version = "0.61.3"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_SystemInformation",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_SystemServices",
]
optional = true

[features]
win = ["dep:windows"]
x11 = ["dep:xcb"]
gnome = ["dep:zbus"]
wayland = [
	"dep:wayland-client",
	"dep:wayland-protocols",
	"dep:wayland-protocols-plasma",
	"dep:wayland-protocols-wlr",
]
kde = ["wayland", "dep:zbus"]
mock = ["dep:mockall"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
