[package]
name = "whatawhat-lib"
version = "0.1.0"
edition = "2024"
description = "A collection of utils for windows and linux for collecting activity data"
authors = ["Andrii Zahorulko", "Demmie <2e3s19@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/Anoromi/whatawhat-lib"


[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sysinfo = "0.36.1"
tracing = "0.1.41"
zbus = { version = "5.9.0", features = ["blocking"], optional = true }
wayland-client = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", features = [
	"staging",
	"client",
], optional = true }
wayland-protocols-plasma = { version = "0.3.9", features = [
	"client",
], optional = true }
wayland-protocols-wlr = { version = "0.3.9", features = [
	"client",
], optional = true }
chrono = "0.4.41"
mockall = { version = "0.13.1", optional = true }
freedesktop-desktop-entry = { version = "0.7.14", optional = true }
systemicons = { version = "0.9.13", optional = true }
gio = { version = "0.21.1", optional = true }
pelite = { version = "0.10.0", optional = true }

objc2 = { version = "=0.6.2", optional = true }
objc2-foundation = { version = "=0.3.1", optional = true, features = [
	"NSDictionary",
	"NSString",
	"NSAppleScript",
	"NSURL",
] }
objc2-osa-kit = { version = "=0.3.1", optional = true }
objc2-core-graphics = { version = "0.3.1", optional = true }


[dependencies.xcb]
version = "^1.6"
features = ["screensaver"]
optional = true

[dependencies.windows]
version = "0.61.3"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_SystemInformation",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_SystemServices",
]
optional = true


[features]
win = ["dep:windows", "dep:pelite"]
x11 = ["dep:xcb", "dep:freedesktop-desktop-entry", "dep:gio", "dep:systemicons"]
gnome = ["dep:zbus", "dep:freedesktop-desktop-entry", "dep:gio"]
wayland = [
	"dep:wayland-client",
	"dep:wayland-protocols",
	"dep:wayland-protocols-plasma",
	"dep:wayland-protocols-wlr",
	"dep:freedesktop-desktop-entry",
	"dep:gio",
	"dep:systemicons",
]
kde = [
	"wayland",
	"dep:zbus",
	"dep:freedesktop-desktop-entry",
	"dep:gio",
	"dep:systemicons",
]
mock = ["dep:mockall"]
macos = [
	"dep:objc2-foundation",
	"dep:objc2",
	"dep:objc2-osa-kit",
	"dep:objc2-core-graphics",
]


[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.19"

[profile.release]
debug = true
